--- a/src/pages/_home.scss
+++ b/src/pages/_home.scss
@@ -195,7 +195,7 @@
 #site_logo_large {
   width: 30rem;
   height: 30rem;
-  margin-top: -8rem;
+  margin-top: -19rem;
   pointer-events: none;
 }
 
